2004-04-12  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Equatorial.pm (_ecllonglat): Add ecliptic
	latitude and longitude.

2004-02-27  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm: Proper motions and parallax
	no longer default to zero if not given in constructor.
	
2004-02-25  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm: Allow for various equinoxes,
	epochs, and proper motion and parallax handling.

	* t/pm.t: Add test for proper motion and parallax at different
	epoch and equinox.

2004-02-24  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm: Add ra2000 and dec2000
	methods. ra() and dec() method now documented to return ra/dec for
	reference epoch.

2004-01-31  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm: First attempt at parallax and
	proper motions

2003-11-17 Tim Jenness <tjenness@cpan.org>

	Release v0.05 to CPAN

2003-11-17  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Fixed.pm (_hadec): Force RA to be in range 0 to
	2 PI.

2003-08-19  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm (new): Do not instantiate an
	object if something is missing from the constructor.

	* lib/Astro/Coords.pm (ha_set: Deal with case where source never
	has a set time 

2003-07-26  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm (_cvt_torad): Issue a warning if the
	sexagesimal string can not be parsed.

2003-07-15  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Add rise/set/transit time and definitions
	of twilight.

2003-03-12  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm (calculate): Trap zero increment

2003-02-18  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Add lst to the return hash in calculate method

2002-11-10  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* lib/Astro/Coords.pm (calculate): Add calculate method
